# geometry

./: CMakeLists.txt
dependencies/jsoncpp/: jsoncpp.cpp
lib/: CMakeLists.txt  GeometryAPI.hpp  Point2d.cpp  Point2d.hpp  Point3d.cpp  Point3d.hpp
